# SaettaRos

./: .gitignore  .gitignore~  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml  oldmain.c  oldmain.h  simple.rviz  simple.vcg  stack.xml
Base/: manifest.xml
Messages/: Makefile
Messages/msg/: odom.msg
Messages/msg_gen/cpp/include/Saetta_Messages/: cmd_vel.h  odom.h
Messages/msg_gen/lisp/: Saetta_Messages-msg.asd  _package_saetta_cmd_vel.lisp  cmd_vel.lisp
Messages/src/Saetta_Messages/msg/: __init__.py  _saetta_odom.py
Saetta_Base/src/: saetta_teleop.cpp  shellgui-old.cpp
Saetta_Base/src/core/: robot_core.h
Saetta_Messages/: manifest.xml
Saetta_Messages/msg_gen/cpp/include/Saetta_Messages/: saetta_cmd_vel.h  saetta_odom.h
Saetta_Messages/msg_gen/lisp/: _package.lisp  _package_saetta_odom.lisp  odom.lisp  saetta_cmd_vel.lisp
Saetta_Messages/src/Saetta_Messages/msg/: _saetta_cmd_vel.py
Saetta_Vision/: Vision.hpp  main.cpp
Saetta_Vision/RosVisionSystem/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Package-Debug.bash
Saetta_Vision/RosVisionSystem/nbproject/private/: private.xml
Vision/: .gitignore  Vision.cpp
Vision/RosVisionSystem/nbproject/: Makefile-impl.mk  Makefile-variables.mk  Package-Release.bash  configurations.xml  project.xml
cfg/: Saetta_Base_params.cfg  Saetta_Base_params.cfgc
cfg/.svn/: entries
cfg/cpp/Saetta_Base/: Saetta_Base_paramsConfig.h
core/: pic2netus.c  pic2netus.h  robot_core.c
include/: Saetta_Base.h  Saetta_Base.h~  joystick.h  joystick.h~
include/turtlesim/: Velocity.h
launch/: 3bots_online_stats.launch  saetta_base_test.launch~  saetta_stupid.launch~
msg/.svn/: entries
nbproject/: Package-Default.bash  configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
saetta_algorithms/: CMakeLists.txt  manifest.xml
saetta_algorithms/include/: rigidform.hpp
saetta_algorithms/src/: holonomic_ctrl.cpp  rigidform.cpp  rigidformdistrib.cpp  rigidverifier.cpp  saetta_stop.cpp  tf_broadcaster.cpp
saetta_base/: CMakeLists.txt  Makefile
saetta_base/include/: Saetta_Base.h
saetta_base/launch/: 3bots_offline.launch  3bots_online.launch  complete.launch
saetta_base/src/: base.cpp  saetta_teleop.cpp
saetta_msgs/: .gitignore  CMakeLists.txt  Makefile  manifest.xml
saetta_msgs/msg_gen/cpp/include/Messages/: cmd_vel.h  odom.h
saetta_msgs/msg_gen/lisp/: Messages-msg.asd  _package.lisp  _package_cmd_vel.lisp  _package_odom.lisp  saetta_odom.lisp
saetta_msgs/src/Messages/msg/: __init__.py  _cmd_vel.py  _odom.py
saetta_msgs/src/Saetta_Messages/msg/: _cmd_vel.py  _odom.py
saetta_vision/: .gitignore  CMakeLists.txt  Vision.cpp  Vision.hpp  main.cpp  manifest.xml
saetta_vision/include/: Vision.hpp  Vision2.hpp  VisionAutoConf.hpp
saetta_vision/src/: Vision.cpp  Vision2.cpp  VisionAutoConf.cpp  cam_read.cpp  main.cpp
saetta_vision/src/cvblobs8.3_linux/: Makefile
sensor/: robot_sensors.h
src/: CMakeCache.txt  Saetta_Base_core.cpp~  base.cpp  base.cpp~  base_core.cpp~  joystick.c~  main.cpp~  saetta_teleop.cpp  saetta_teleop.cpp~  shellgui.cpp  shellgui.cpp~
src/core/: robot_core.c
time_tests/: CMakeLists.txt  manifest.xml
time_tests/msg/: CMakeLists.txt  timetests.pb.cc  timetests.pb.h  timetests.proto
time_tests/src/: timing_root.cpp
timestats/: .gitignore  CMakeLists.txt  manifest.xml
timestats/include/: timing_class.hpp
timestats/launch/: test.launch
timestats/msg/: AggregatedStats.msg  Machine.msg  Makefile  Report.msg  StatsInfo.msg  extStatsInfo.msg
timestats/src/: timestats_aggregator.cpp  timestats_gen.cpp  timing_class.cpp
timestats/src/timestats/msg/: _AggregatedStats.py  _Machine.py  _Report.py  _StatsInfo.py  __init__.py
